Make sure all buttons accessible in list on small screens

--- a/web-client/src/rmwc-overrides.css
+++ b/web-client/src/rmwc-overrides.css
@@ -12,6 +12,10 @@
   color: var(--mdc-theme-on-surface);
 }
 
+.mdc-list-item__meta {
+  display: flex;
+}
+
 .mdc-fab {
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.1),
     0px 6px 10px 0px rgba(0, 0, 0, 0.03), 0px 1px 18px 0px rgba(0, 0, 0, 0.03);
